entity_macros/tests/ui/attribute/core-field-last_updated-already-marked.stderr
error: Cannot mark a last_updated field if including ent core
 --> $DIR/core-field-last_updated-already-marked.rs:6:5
  |
6 |     #[ent(last_updated)]
  |     ^
